test/error/unterminated_comment.err
test/error/unterminated_comment.let:2:1-3: error: non-terminated multiline comment
1 error(s) encountered
